<resources>
    <string name="app_name">Pikedia</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <!-- Activity Titles -->
    <string name="ttl_structure_information">Basic Structure Information</string>
    <string name="ttl_background_information">Background Information</string>
    <string name="ttl_historical_events">Historical Events</string>
    <string name="ttl_basic_information">Basic Information</string>
    <string name="ttl_feature_description">Feature Description</string>
    <string name="ttl_architectural_information">Architectural Information</string>

    <!-- Dialogue Strings -->
    <string name="diafrg_add_case_study">Add Point of Interest</string>
    <string name="diafrg_tag_ready">You won\'t be able to tag the preview any further. Continue the experiment only if you are ready of tagging all the objects.</string>

    <!-- Facts Elements -->
    <string name="poi_name">What is it\'s name?</string>
    <string name="poi_architecture_type">What type of building is it?</string>
    <string name="poi_artistic_style">In what style is it?</string>
    <string name="poi_next">NEXT</string>
    <string name="poi_back">BACK</string>
    <string name="poi_finish">Finish</string>
    <string name="poi_description_hint">In around 50 words, describe the building\'s appearance from top to bottom.</string>
    <string name="poi_description">Describe the building\'s appearance.</string>
    <string name="poi_built_in">In what year was it built?</string>
    <string name="poi_built_by">Who built it?</string>
    <string name="poi_architect">Who designed it?</string>
    <string name="poi_year">Year</string>
    <string name="poi_event">Event</string>
    <string name="poi_religion">Which religion is it associated with?</string>
    <string name="poi_religion_question">Is the point of interest associated with a religion ?</string>
    <string name="poi_purpose">What purpose does the point of interest have?</string>
    <string name="poi_purpose_hint">What purpose does it have?, does it represent a historical event?, does it provide a service?</string>
    <string name="poi_language">What is the language used?</string>
    <string name="poi_entrance_fees">How much is the entrance fee?</string>
    <string name="poi_depiction">What does it depict?</string>
    <string name="poi_feature_hint">Describe the feature. Answer questions such as: what is it?, what is it made out of?, what colors are used ? etc&#8230;</string>
    <string name="poi_feature">Describe the feature.</string>

    <!-- Participant's Elements-->
    <string name="prt_gender">Gender</string>
    <string name="prt_age">Age</string>
    <string name="prt_location">Locality</string>
    <string name="prt_smartphone_ownership_os">Smartphone Ownership OS</string>
    <string name="prt_smartphone_years">Smartphone Years of Ownership</string>
    <string name="prt_employment">Current Employment</string>
    <string name="prt_course">Current Course</string>

    <!-- Experiment Wizard Texts -->
    <string name="expwzd_welcome">Welcome to "Crowdsourcing of Information on Points of Interest" experiment using Pikedia</string>
    <string name="expwzd_brief_experiment_description">This experiment is being conducted to gather information on buildings or objects that are of interest.</string>
    <string name="expwzd_start_experiment">Kindly, tap on the bottom arrow to start the experiment</string>
    <string name="expwzd_feature_description">Start tagging the photograph preview for the building\'s features such as doors, statue, etc by tapping on the screen</string>



    <string name="test">Bacon ipsum dolor amet alcatra meatloaf shankle porchetta pork chop boudin ham ham hock shank venison short ribs swine flank rump. </string>


</resources>
