<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:gravity="center_vertical"
                android:background="@color/divider">

    <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:title="@string/ttl_structure_information"
            android:paddingStart="25dp"
            android:paddingLeft="25dp"
            android:elevation="5sp"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_below="@+id/app_bar"
                  android:layout_alignParentStart="true"
                  android:background="@color/cardview_light_background">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/cardview_light_background"
                android:layout_below="@+id/app_bar">

            <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/spinnerGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    app:ms_highlightColor="@color/colorPrimary"
                    app:ms_baseColor="@color/line"
                    app:ms_hintColor="@color/secondary_text"
                    app:ms_floatingLabelColor="@color/secondary_text"
                    android:isScrollContainer="true"
                    app:ms_enableFloatingLabel="true"
                    app:ms_hint="@string/prt_gender"
                    app:ms_floatingLabelText="@string/prt_gender"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"/>

            <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/spinnerAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    app:ms_highlightColor="@color/colorPrimary"
                    app:ms_baseColor="@color/line"
                    app:ms_hintColor="@color/secondary_text"
                    app:ms_floatingLabelColor="@color/secondary_text"
                    android:isScrollContainer="true"
                    app:ms_enableFloatingLabel="true"
                    app:ms_hint="@string/prt_age"
                    app:ms_floatingLabelText="@string/prt_age"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"/>

            <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/spinnerEmployment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    app:ms_highlightColor="@color/colorPrimary"
                    app:ms_baseColor="@color/line"
                    app:ms_hintColor="@color/secondary_text"
                    app:ms_floatingLabelColor="@color/secondary_text"
                    android:isScrollContainer="true"
                    app:ms_enableFloatingLabel="true"
                    app:ms_hint="@string/prt_employment"
                    app:ms_floatingLabelText="@string/prt_employment"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="15dp"
            android:background="#EEEEEE"
            android:id="@+id/linearLayout">


        <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3"/>
        <LinearLayout
                android:id="@+id/nextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/poi_next"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/primary_text"
                    android:layout_gravity="center"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_navigate_next_black_24dp"
                    android:id="@+id/imageView3"
                    android:layout_gravity="center"/>
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>