<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:title="@string/ttl_structure_information"
            android:paddingStart="25dp"
            android:paddingLeft="25dp"
            android:elevation="5sp"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F5F5F5">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/imageViewPointOfInterest"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@color/cardview_dark_background"
                    android:elevation="1dp"
                    android:layout_marginBottom="1dp"/>

            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/cardview_light_background">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                            android:id="@+id/textViewDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/poi_description"
                            android:textStyle="bold"
                            android:focusable="false"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/test"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/cardview_light_background">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                            android:id="@+id/textViewStructureInformation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:textStyle="bold"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:text="@string/ttl_structure_information"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/poi_built_in"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:textSize="16sp"
                            android:textColor="#000"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/test"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/poi_built_by"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:textSize="16sp"
                            android:textColor="#000"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/test"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>