<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:gravity="center_vertical"
                android:background="@color/divider">

    <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:title="@string/ttl_structure_information"
            android:paddingStart="25dp"
            android:paddingLeft="25dp"
            android:elevation="5sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:background="@color/cardview_light_background"
            android:id="@+id/relative_layout_add_history_event"
            android:layout_below="@+id/app_bar"
            android:layout_alignParentStart="true"
            android:elevation="3sp"
            android:focusable="true">

        <android.support.v7.widget.AppCompatTextView
                android:text="@string/poi_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPoiHistoryYear"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="20dp"
                android:textSize="13sp"
                android:textColor="@color/secondary_text"
                android:focusable="true"
                android:focusableInTouchMode="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/materialEditTextYear"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:met_primaryColor="@color/colorPrimary"
                app:met_baseColor="@color/colorAccent"
                app:met_textColor="@color/primary_text"
                app:met_underlineColor="@color/colorAccent"
                style="@style/MyEditTextTheme"
                android:inputType="number"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/textViewPoiHistoryYear"
                android:layout_marginBottom="50dp"
                android:nextFocusUp="@id/materialEditTextYear"
                android:nextFocusLeft="@id/materialEditTextYear"/>

        <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewDivider"
                android:text="-"
                android:textSize="19sp"
                android:layout_alignBaseline="@+id/materialEditTextEvent"
                android:layout_alignBottom="@+id/materialEditTextEvent"
                android:layout_toEndOf="@+id/materialEditTextYear"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

        <android.support.v7.widget.AppCompatTextView
                android:text="@string/poi_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPoiHistoryEvent"
                android:textSize="13sp"
                android:textColor="@color/secondary_text"
                android:layout_alignBaseline="@+id/textViewPoiHistoryYear"
                android:layout_alignBottom="@+id/textViewPoiHistoryYear"
                android:layout_toEndOf="@+id/textViewDivider"/>

        <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/materialEditTextEvent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:textSize="16sp"
                app:met_primaryColor="@color/colorPrimary"
                app:met_baseColor="@color/colorAccent"
                app:met_textColor="@color/primary_text"
                app:met_underlineColor="@color/colorAccent"
                style="@style/MyEditTextTheme"
                android:inputType="textMultiLine"
                android:layout_alignBaseline="@+id/materialEditTextYear"
                android:layout_alignBottom="@+id/materialEditTextYear"
                android:layout_toEndOf="@+id/textViewDivider"/>

        <android.support.v7.widget.AppCompatButton
                android:layout_width="75dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="5dp"
                android:text="Save"
                android:textSize="13sp"
                style="@style/Widget.AppCompat.Button.Colored"/>
    </RelativeLayout>

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/cardview_dark_background"
              android:layout_below="@+id/relative_layout_add_history_event"
              android:layout_alignParentStart="true">
    </ListView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="15dp"
            android:background="#EEEEEE"
            android:id="@+id/linearLayout">

        <ImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_navigate_next_black_24dp"
                android:rotation="180"/>

        <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3"/>

        <LinearLayout
                android:id="@+id/nextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/poi_next"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/primary_text"
                    android:layout_gravity="center"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_navigate_next_black_24dp"
                    android:id="@+id/imageView3"
                    android:layout_gravity="center"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>